# keystone-demo

./: .gitignore  BUILDING  CMakeLists.txt  DESIGN.org  Makefile  Makefile.deprecated  README.md  app.lds  calculator.h  dummy_client.cpp  dummy_client.h  edge_wrapper.cpp  edge_wrapper.h  encl_message.h  enclave-host-dummy-client.cpp  enclave-host.cpp  ocalls_host.cpp  quick-start.sh  source.sh
clients/: Makefile  calculator.h  clients.c  edge_wrapper.c  edge_wrapper.h  sodium_rng.h
docs/: Building-and-Running.rst  Building-libsodium.rst  Demo-Basics.rst
include/: calc_msg.h  edge_defines.h  enclave_expected_hash  enclave_expected_hash.h  genhash.sh  hacks.h  sm_expected_hash  sm_expected_hash.h
keyedge/: flatbuffers_common_builder.h  flatbuffers_common_reader.h  ocalls.fbs  ocalls.h  ocalls_builder.h  ocalls_common.h  ocalls_eapp.h  ocalls_host.h  ocalls_reader.h  ocalls_verifier.h
scripts/: extract_hash.sh  get_attestation.sh
server_eapp/: CMakeLists.txt  Makefile  calculator.c  calculator.h  channel.c  channel.h  eapp_func.c  eapp_func.h  edge_wrapper.c  edge_wrapper.h  ocalls_eapp.c  server_eapp.c
sodium_patches/: BUILDING_SODIUM  configure.patch  configure_string  salsa.patch
trusted_client/: client.cpp  client.h  trusted_client.cpp  trusted_client.h
